# context-profiler

./: .gitignore  CLAUDE.md  RATIONALE.md  README.md
demo-repo/: CLAUDE.md  pyproject.toml
demo-repo/.github/workflows/: deploy.yml
demo-repo/.profiler/: config.json
demo-repo/.profiler/attribution/: assessor-raw.json  instruction-evidence.json
demo-repo/.profiler/inputs/: tasks.json
demo-repo/.profiler/instructions/: instructions.json
demo-repo/.profiler/review/: review-items.json
demo-repo/.profiler/runs/tasks/add-delimiter-flag/run-001/output/: result.json  sdk-events.jsonl
demo-repo/.profiler/runs/tasks/add-delimiter-flag/run-002/output/: result.json  sdk-events.jsonl
demo-repo/.profiler/runs/tasks/add-delimiter-flag/run-003/output/: result.json  sdk-events.jsonl
demo-repo/.profiler/runs/tasks/add-median-stat/run-001/output/: result.json  sdk-events.jsonl
demo-repo/.profiler/runs/tasks/add-median-stat/run-002/output/: result.json  sdk-events.jsonl
demo-repo/.profiler/runs/tasks/add-tsv-loader/run-001/output/: result.json  sdk-events.jsonl
demo-repo/.profiler/runs/tasks/add-tsv-loader/run-002/output/: result.json  sdk-events.jsonl
demo-repo/.profiler/runs/tasks/add-tsv-loader/run-003/output/: result.json  sdk-events.jsonl
demo-repo/.profiler/stages/: assess.cache.json  extract-instructions.cache.json
demo-repo/.profiler/traces/: sessions-index.json
demo-repo/src/csvstats/: __init__.py  cli.py  errors.py  loader.py  report.py
demo-repo/tests/: test_loader.py  test_report.py
demo-repo/tests/fixtures/: sample.csv  sample.tsv
(+53 files in other folders)
