[project]
name = "csvstats"
version = "0.1.0"
description = "Summarize CSV files into JSON reports."
requires-python = ">=3.11"

[project.scripts]
csvstats = "csvstats.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csvstats"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
